Fixed Apple acrylic not working on Safari

--- a/common/static/css/style.css
+++ b/common/static/css/style.css
@@ -7,6 +7,7 @@
   width: 100%;
   z-index: 999;
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   background-color: rgba(22, 22, 23, .8);
 }
 
